Fixed squished main view on sidebar mobile

--- a/src/components/Sidebar/styles/index.scss
+++ b/src/components/Sidebar/styles/index.scss
@@ -8,4 +8,8 @@
 	&.active {
 		margin-left: 0px;
 	}
+	@media (max-width: 767.98px) {
+		z-index: 1000;
+		position: fixed;
+	}
 }
